fix: Remove dependency on deprecated newInstance() method